# cursor

./: .gitignore  README.md  audio.py  loudness.py  main.py  pyproject.toml
.cursor/: .gitignore  rules.mdc
inputs/: .gitignore  kilos-pharaohs.flac  miles-pharaohs.flac
